# PrivGrid

./: Priv-Clustering  README.md
AMT-via-SIP/: CMakeLists.txt  README.md
AMT-via-SIP/src/: global.cpp  global.h  main.cpp  main.h  matrix.h  mulgate.h  plainmatrix.h  triples.cpp  triples.h
Priv-forecasting/: README.md
Priv-processing/: CMakeLists.txt  README.md
Priv-processing/src/: global.cpp  global.h  main.cpp  main.h  matrix.cpp  mulgate.cpp  mulgate.h  share.cpp  share.h  triples.cpp  triples.h  triplescheck.h
Priv-training/: README.md
Share-gen/: CMakeLists.txt  README.md
Share-gen/src/: global.cpp  global.h  main.cpp  main.h  mulgate.cpp  network.cpp  network.h  share.cpp  share.h  triples.cpp
paillier_k_means_com_2048/s0/debug/: data_flag  paillier  priv0
paillier_k_means_com_2048/s0/src/: main.c  paillier.c  paillier_manage_keys.c  tools.h
paillier_k_means_com_2048/s1/debug/: paillier  pk0  pk1  priv1
paillier_k_means_com_2048/s1/src/: main.c  paillier.h  paillier_io.c  paillier_manage_keys.c  tools.c
